@startuml
'https://plantuml.com/class-diagram

abstract KeHoachHT{
# String ten;
+ {abstract} void add(KeHoachHT k)
+ {abstract} void remove(KeHoachHT k)
+ {abstract} int getsoTC()
+ {abstract} int gethocPhi()
+ {abstract} String thongTin()
}

class MonHoc{
# int soTC, hocPhi;
}

class KeHoachChung

KeHoachHT <--* KeHoachChung
KeHoachHT <|-- MonHoc
KeHoachHT <|-- KeHoachChung
@enduml